<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginActivity"
    android:background="@color/gray"
    >

    <EditText
        android:autofillHints="no"
        android:textColor="@color/white"
        android:id="@+id/login_et"
        android:inputType="text"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:hint="@string/enter_login_text"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/password_et"
        android:autofillHints="no"
        android:textColor="@color/white"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:inputType="textPassword"
        android:hint="@string/enter_pass_text"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_et" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/roundedbutton"
        />

    <TextView
        android:id="@+id/no_acc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dont_have_acc_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <TextView
        android:id="@+id/to_sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zareg"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_acc_tv" />



</androidx.constraintlayout.widget.ConstraintLayout>