<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/operation_lay"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView_category"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/example_category_name_ext"
            android:layout_marginLeft="16dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_category"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_cost_text"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_date_text"
            android:layout_marginLeft="16dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/imageView_category"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>